syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "TrackingDataMessages";

package com.sourceforgery.tachikoma.trackingdata;


// Message to be url-encoded with signature
message UrlTrackingData {
    sint64 messageId = 101;
    string redirectUrl = 102;
}

message UrlSignedMessage {
    bytes message = 101;
    bytes signature = 102;
}